--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fastify/static": "^6.9.0",
     "@fastify/view": "^7.4.1",
     "@slack/bolt": "^3.13.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "handlebars": "^4.7.7"
   },
